quick update to README regarding Windows